Fix html main too long

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 main {
-  height: calc(100vh - 3.5rem);
+  height: calc(100vh - 4rem);
 }
